<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ann_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/ann_string_text" />

    <TextView
        android:id="@+id/ann"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ann_text"
        android:textSize="30sp"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/a0_string"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/a0_string_text" />

        <TextView
            android:id="@+id/a0"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/a0_text"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/a1_string"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:gravity="center"
            android:text="@string/a1_string_text" />

        <TextView
            android:id="@+id/a1"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/a1_text"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/count_up"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_weight="1"
            android:text="@string/count_up_text"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/count_down"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/count_down"
            android:textSize="30sp" />
    </LinearLayout>

</LinearLayout>
